--- a/resources/sass/_extra.scss
+++ b/resources/sass/_extra.scss
@@ -123,10 +123,23 @@ i.button-icon {
   .btn:disabled {   
     cursor: not-allowed;
   }      
+  
+  /** TABLE **/
+
   .table thead th {
     border-bottom: 1px solid hsl(208%, 7%, 46%);
     border-top: none;
     // color: hsla(208, 7%, 46%, 1);
     text-transform: uppercase;
     font-size: 0.8rem;
+  }
+  
+  /* rounded let & right table head */
+  .card-body.p-0 .table thead > tr > th {
+    &:first-of-type {
+      border-top-left-radius: 4px;
+    }
+    &:last-of-type {
+      border-top-right-radius: 4px;
+    }
   }
