--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -28386,6 +28386,10 @@ a.text-muted:hover {
   background-color: #64d8e8;
 }
 
+.bg-lightcyan {
+  background-color: #c0e6ec;
+}
+
 body {
   color: #525252;
 }
@@ -28508,9 +28512,18 @@ i.button-icon {
   cursor: not-allowed;
 }
 
+/** TABLE **/
 .table thead th {
   border-bottom: 1px solid #6d767e;
   border-top: none;
   text-transform: uppercase;
   font-size: 0.8rem;
+}
+
+/* rounded let & right table head */
+.card-body.p-0 .table thead > tr > th:first-of-type {
+  border-top-left-radius: 4px;
+}
+.card-body.p-0 .table thead > tr > th:last-of-type {
+  border-top-right-radius: 4px;
 }
