--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,8 +7,9 @@
 // Fonts
 @import url('https://fonts.googleapis.com/css?family=Nunito');
 
-
 @import '~overlayscrollbars/css/OverlayScrollbars';
+
+@import '~bootstrap-datepicker/dist/css/bootstrap-datepicker.css';
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
