--- a/resources/sass/dashboard.scss
+++ b/resources/sass/dashboard.scss
@@ -10,7 +10,8 @@
 // Bootstrap
 // @import '~bootstrap/scss/bootstrap';
 //  AdminLTE (includes bootstrap)
-@import '~admin-lte/build/scss/AdminLTE';
+// @import '~admin-lte/build/scss/AdminLTE';
+@import '~admin-lte/build/scss/adminlte';
 
 // @import '~overlayscrollbars/css/OverlayScrollbars';
 
