--- a/public/css/app.css
+++ b/public/css/app.css
@@ -17678,6 +17678,14 @@ h3 {
   border-radius: 0.5rem;
 }
 
+.rounded-top-left {
+  border-top-left-radius: 0.25rem !important;
+}
+
+.rounded-top-right {
+  border-top-right-radius: 0.25rem !important;
+}
+
 /** TEXT COLOR 
 *****************************/
 .dodgerblue {
@@ -17730,6 +17738,10 @@ h3 {
 
 .bg-mayablue {
   background-color: #74C0FC;
+}
+
+.bg-mayablue-medium {
+  background-color: #d4ecff;
 }
 
 .bg-lightgreen {
