--- a/resources/sass/_colors.scss
+++ b/resources/sass/_colors.scss
@@ -8,6 +8,7 @@ $light-blue: #E1F5FE;
 $light-green: #F1F8E9;
 $light-purple: #E7E8FF;
 $maya-blue: #74C0FC;
+$maya-blue-medium: #d4ecff;
 $dodger-blue: #228BE6;
 
 $lightblue: hsla(202, 52%, 49%, 1);
