--- a/resources/sass/_utilities.scss
+++ b/resources/sass/_utilities.scss
@@ -59,7 +59,7 @@
   background-color: #e7f5ff;
 }
 .bg-mayablue {
-  background-color: $maya-blue; 
+  background-color: $maya-blue !important; 
 }
 .bg-mayablue-medium {
   background-color: $maya-blue-medium;
