--- a/resources/sass/_utilities.scss
+++ b/resources/sass/_utilities.scss
@@ -24,6 +24,14 @@
   color: $maya-blue;
 }
 
+.text-blueviolet {
+  color: hsla(271, 76%, 53%, 1) !important;
+}
+
+.text-skyblue {
+  color: hsla(204, 70%, 53%, 1) !important;
+}
+
 /** TEXT SHADOW
 *****************************/
 .text-shadow {
